objects/INX_ActivityEvent__e.object
<CustomObject>
    <description>Event for Infinit activity</description>
    <fields>
        <fullName>INX_Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Activity_Timestamp__c</fullName>
        <label>Activity timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INX_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Close_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Hash__c</fullName>
        <label>Commit (hash)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Package_Directory__c</fullName>
        <label>Package directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Repository__c</fullName>
        <label>Repository</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Source_Branch__c</fullName>
        <label>Source rbanch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity Event</label>
    <pluralLabel>Activity Events</pluralLabel>
</CustomObject>